--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -202,3 +202,12 @@ pre {
         }
     }
 }
+
+.icon {
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    vertical-align: middle;
+
+    color: $grey-color;
+}
